# global-hotkey

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: INSTRUCTIONS.md
.claude/agents/: ci-cd-setup.md  platform-integration.md  rust-backend.md  svelte-frontend.md  system-tray.md  tauri-scaffolding.md
.claude/commands/app/: build.md  dev.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: IMPLEMENTATION-ai-module.md  PRD-ai-module.md  PRD-post-actions.md  PRD.md  implementation-plan.md  post-action-implementation.md  post-action-prd.md
scripts/: dev.sh  generate-app-icons.mjs  generate-tray-icons.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs
src-tauri/src/ai/: gemini.rs  mod.rs  provider.rs  roles.rs
src-tauri/src/audio/: encoder.rs  mod.rs  recorder.rs
src-tauri/src/config/: manager.rs  mod.rs  schema.rs  validation.rs
src-tauri/src/hotkey/: conflict.rs  handler.rs  manager.rs  mod.rs
src-tauri/src/postaction/: executor.rs  input.rs  mod.rs
src-tauri/src/process/: mod.rs  platform.rs  spawner.rs
src/components/: AiSettings.svelte  ConfirmDialog.svelte  FileBrowser.svelte  GeneralSettings.svelte  HotkeyDialog.svelte  HotkeyList.svelte  HotkeyRecorder.svelte  PostActionEditor.svelte  RoleEditor.svelte
src/lib/: commands.ts  types.ts  utils.ts
src/stores/: hotkeys.ts  settings.ts
