[package]
name = "global-hotkey"
version = "1.0.10"
description = "Cross-platform keystroke-summoned program launcher"
authors = ["Global Hotkey Team"]
edition = "2021"

[lib]
name = "global_hotkey_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
global-hotkey = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"
once_cell = "1.20"
which = "7"
enigo = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"

# AI Module - HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Base64 encoding for audio data
base64 = "0.22"

# Audio Recording
cpal = "0.15"           # Cross-platform audio I/O
ogg = "0.9"             # Ogg container format
audiopus = "0.2"        # Opus codec encoding
hound = "3.5"           # WAV encoding (fallback)

# Async runtime for post-action AI calls
tokio = { version = "1", features = ["rt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Registry",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
